[package]
name = "share_terminal"
version = "0.1.0"
authors = ["Amrit Ghimire <iamritghimire@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version ="0.11.4", features = ["json", "blocking"] }
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1.6"
regex = "1.5.4"
xlsxwriter = "0.3.5"
